--- a/package.json
+++ b/package.json
@@ -10,12 +10,24 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/montserrat": "^0.2.0",
+    "@expo/vector-icons": "^12.0.0",
+    "@sentry/react-native": "^3.2.10",
     "expo": "~44.0.0",
+    "expo-app-loading": "~1.3.0",
+    "expo-application": "~4.0.1",
+    "expo-constants": "~13.0.0",
+    "expo-device": "~4.1.0",
+    "expo-font": "~10.0.4",
+    "expo-linear-gradient": "~11.0.0",
+    "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "sentry-expo": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
